--- a/style.css
+++ b/style.css
@@ -388,6 +388,11 @@ ul.our-primary-menu li ul li ul{
     position: relative;
 }
 
+.finix-text h6{
+    color: #e73c3e;
+
+}
+
 
 .paly-animation-btn{
     width: 80px;
